--- a/src/hotel/management/system/ManageRoom.form
+++ b/src/hotel/management/system/ManageRoom.form
@@ -10,7 +10,7 @@
       <Color id="Default Cursor"/>
     </Property>
     <Property name="location" type="java.awt.Point" editor="org.netbeans.beaninfo.editors.PointEditor">
-      <Point value="[50, 118]"/>
+      <Point value="[50, 123]"/>
     </Property>
     <Property name="undecorated" type="boolean" value="true"/>
   </Properties>
@@ -107,7 +107,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="24" style="1"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Manage Room"/>
+        <Property name="text" type="java.lang.String" value="Rooms"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="jButton1">
